...
                }
            } else {
                ProgressView("Fetching Repositories...")
                    .onAppear(perform: fetchUserRepos)
            }
        }
        .navigationTitle("My Repositories")
    }
    
    private func fetchUserRepos() {
        let url = URL(string: "https://api.github.com/users/\(userSettings.username)/repos")!
        URLSession.shared.dataTask(with: url) { data, _, error in
            guard let data = data, error == nil else { return }
...
